--- a/movie recommenders.ipynb
+++ b/movie recommenders.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "('users =', 671, 'movies =', 9066)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#preparing data for embedding by indexing userids, moviesids\n",
@@ -168,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#embedding data\n",
@@ -271,8 +275,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#defining latent factor for embedding layers\n",
@@ -282,8 +288,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#splitting the data\n",
@@ -294,11 +302,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
-    "#creating input layer\n",
     "from keras.models import Model\n",
     "from keras.layers import Dense,Input,Embedding,Dropout, merge, Flatten\n",
     "from keras.regularizers import l2\n",
@@ -307,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -320,16 +335,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Chaitra\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: UserWarning: Update your `Embedding` call to the Keras 2 API: `Embedding(671, 50, input_length=1, embeddings_regularizer=<keras.reg...)`\n",
+      "C:\\Users\\Chaitra\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: UserWarning: Update your `Embedding` call to the Keras 2 API: `Embedding(671, 50, embeddings_regularizer=<keras.reg..., input_length=1)`\n",
       "  \n",
-      "C:\\Users\\Chaitra\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: UserWarning: Update your `Embedding` call to the Keras 2 API: `Embedding(9066, 50, input_length=1, embeddings_regularizer=<keras.reg...)`\n",
+      "C:\\Users\\Chaitra\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: UserWarning: Update your `Embedding` call to the Keras 2 API: `Embedding(9066, 50, embeddings_regularizer=<keras.reg..., input_length=1)`\n",
       "  This is separate from the ipykernel package so we can avoid doing imports until\n"
      ]
     }
@@ -341,17 +356,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "* I am using functional model and not the sequential model. \n",
+    "* Documentation is available at FUNCTIONAL API in keras"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -377,8 +393,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nn.compile(optimizer=Adam(0.01), loss='mse', metrics=['accuracy'])\n"
@@ -386,50 +404,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 79894 samples, validate on 20110 samples\n",
-      "Epoch 1/10\n",
-      "79894/79894 [==============================] - 57s - loss: 1.1396 - acc: 0.3015 - val_loss: 1.0843 - val_acc: 0.3194\n",
-      "Epoch 2/10\n",
-      "79894/79894 [==============================] - 57s - loss: 1.1655 - acc: 0.3013 - val_loss: 1.1127 - val_acc: 0.3167\n",
-      "Epoch 3/10\n",
-      "79894/79894 [==============================] - 57s - loss: 1.1861 - acc: 0.3015 - val_loss: 1.1319 - val_acc: 0.3262\n",
-      "Epoch 4/10\n",
-      "79894/79894 [==============================] - 57s - loss: 1.2029 - acc: 0.3030 - val_loss: 1.1307 - val_acc: 0.3175\n",
-      "Epoch 5/10\n",
-      "79894/79894 [==============================] - 60s - loss: 1.2085 - acc: 0.3038 - val_loss: 1.1474 - val_acc: 0.3215\n",
-      "Epoch 6/10\n",
-      "79894/79894 [==============================] - 56s - loss: 1.2025 - acc: 0.3065 - val_loss: 1.1471 - val_acc: 0.3068\n",
-      "Epoch 7/10\n",
-      "79894/79894 [==============================] - 56s - loss: 1.1857 - acc: 0.3081 - val_loss: 1.0953 - val_acc: 0.3152\n",
-      "Epoch 8/10\n",
-      "79894/79894 [==============================] - 57s - loss: 1.1734 - acc: 0.3074 - val_loss: 1.1188 - val_acc: 0.3204\n",
-      "Epoch 9/10\n",
-      "79894/79894 [==============================] - 58s - loss: 1.1691 - acc: 0.3097 - val_loss: 1.1180 - val_acc: 0.3209\n",
-      "Epoch 10/10\n",
-      "79894/79894 [==============================] - 58s - loss: 1.1556 - acc: 0.3110 - val_loss: 1.0820 - val_acc: 0.3241\n"
+      "Train on 79940 samples, validate on 20064 samples\n",
+      "Epoch 1/2\n",
+      "79940/79940 [==============================] - 22s - loss: 1.6242 - acc: 0.2542 - val_loss: 1.1272 - val_acc: 0.2972\n",
+      "Epoch 2/2\n",
+      "79940/79940 [==============================] - 16s - loss: 1.1352 - acc: 0.2992 - val_loss: 1.0906 - val_acc: 0.3118\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x207fe3d4710>"
+       "<keras.callbacks.History at 0x222e9234cc0>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nn.fit( [trn.userId, trn.movieId], trn.rating,\n",
-    "        epochs=10,\n",
+    "        epochs=2,\n",
     "        batch_size=64,\n",
     "        validation_data=([val.userId,val.movieId],val.rating)\n",
     "      )"
@@ -437,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -448,68 +450,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 79894 samples, validate on 20110 samples\n",
-      "Epoch 1/10\n",
-      "79894/79894 [==============================] - 58s - loss: 0.9652 - acc: 0.3204 - val_loss: 0.8959 - val_acc: 0.3269\n",
-      "Epoch 2/10\n",
-      "79894/79894 [==============================] - 56s - loss: 0.9050 - acc: 0.3251 - val_loss: 0.8605 - val_acc: 0.3352\n",
-      "Epoch 3/10\n",
-      "79894/79894 [==============================] - 56s - loss: 0.8754 - acc: 0.3329 - val_loss: 0.8490 - val_acc: 0.3316\n",
-      "Epoch 4/10\n",
-      "79894/79894 [==============================] - 56s - loss: 0.8577 - acc: 0.3347 - val_loss: 0.8413 - val_acc: 0.3330\n",
-      "Epoch 5/10\n",
-      "79894/79894 [==============================] - 56s - loss: 0.8477 - acc: 0.3372 - val_loss: 0.8416 - val_acc: 0.3323\n",
-      "Epoch 6/10\n",
-      "79894/79894 [==============================] - 58s - loss: 0.8380 - acc: 0.3372 - val_loss: 0.8357 - val_acc: 0.3328\n",
-      "Epoch 7/10\n",
-      "79894/79894 [==============================] - 58s - loss: 0.8343 - acc: 0.3392 - val_loss: 0.8345 - val_acc: 0.3324\n",
-      "Epoch 8/10\n",
-      "79894/79894 [==============================] - 56s - loss: 0.8278 - acc: 0.3397 - val_loss: 0.8320 - val_acc: 0.3384\n",
-      "Epoch 9/10\n",
-      "79894/79894 [==============================] - 147s - loss: 0.8204 - acc: 0.3411 - val_loss: 0.8330 - val_acc: 0.3345\n",
-      "Epoch 10/10\n",
-      "79894/79894 [==============================] - 16s - loss: 0.8183 - acc: 0.3410 - val_loss: 0.8320 - val_acc: 0.3358\n"
+      "Train on 79940 samples, validate on 20064 samples\n",
+      "Epoch 1/2\n",
+      "79940/79940 [==============================] - 17s - loss: 0.9495 - acc: 0.3138 - val_loss: 0.8850 - val_acc: 0.3198\n",
+      "Epoch 2/2\n",
+      "79940/79940 [==============================] - 16s - loss: 0.8955 - acc: 0.3230 - val_loss: 0.8648 - val_acc: 0.3286\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x207ba651550>"
+       "<keras.callbacks.History at 0x222d546c588>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nn.fit( [trn.userId, trn.movieId], trn.rating,\n",
-    "        epochs=10,\n",
+    "        epochs=2,\n",
     "        batch_size=64,\n",
     "        validation_data=([val.userId,val.movieId],val.rating)\n",
     "      )"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Changing learning rate gave a bump in accuracy.\n",
+    "    In the previous model there was lot of dropouts (IDK why jeremy didnt give attention )\n",
+    "    But i am changing dropout values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Chaitra\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: UserWarning: The `merge` function is deprecated and will be removed after 08/2017. Use instead layers from `keras.layers.merge`, e.g. `add`, `concatenate`, etc.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n",
+      "C:\\Users\\Chaitra\\Anaconda3\\lib\\site-packages\\keras\\legacy\\layers.py:460: UserWarning: The `Merge` layer is deprecated and will be removed after 08/2017. Use instead layers from `keras.layers.merge`, e.g. `add`, `concatenate`, etc.\n",
+      "  name=name)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = merge([u,m], mode='concat')\n",
+    "x1 = Flatten()(x1)\n",
+    "x1 = Dense(70,activation='relu')(x1)\n",
+    "x1 = Dropout(0.5)(x1)\n",
+    "x1 = Dense(1)(x1)\n",
+    "nn = Model([user_in,movie_in],x1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "nn.compile(optimizer=Adam(0.001),loss='mse')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 79940 samples, validate on 20064 samples\n",
+      "Epoch 1/2\n",
+      "79940/79940 [==============================] - 15s - loss: 0.7648 - val_loss: 0.8316\n",
+      "Epoch 2/2\n",
+      "79940/79940 [==============================] - 16s - loss: 0.7417 - val_loss: 0.8280\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x22301b48da0>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn.fit(\n",
+    "        [trn.userId,trn.movieId],trn.rating,\n",
+    "        epochs=2,\n",
+    "        batch_size=64,\n",
+    "        validation_data=([val.userId,val.movieId],val.rating)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# its over fitting. \n",
+    "Previous dropout values by jeremy were correct. XD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nn.save_weights('mov_rec.h5')"
@@ -517,16 +587,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 2.99065065]], dtype=float32)"
+       "array([[ 2.61209059]], dtype=float32)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
